src/main/java/com/example/sos/common/error/BaseError.java
package com.example.sos.common.error;

public class BaseError extends RuntimeException {}
